--- a/Class Management/Views/Budget.xaml
+++ b/Class Management/Views/Budget.xaml
@@ -41,7 +41,7 @@
             <Style x:Key="dataGridStyle"
                    TargetType="{x:Type DataGrid}"
                    BasedOn="{StaticResource AzureDataGrid}">
-                <Setter Property="Margin" Value="10 0 10 30"></Setter>
+                <Setter Property="Margin" Value="10 0 10 10"></Setter>
                 <Setter Property="BorderBrush" Value="Black"/>
                 <Setter Property="BorderThickness" Value="2"/>
                 <Setter Property="AutoGenerateColumns" Value="False"/>
@@ -57,7 +57,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100"/>
                     <RowDefinition Height="1*"/>
-                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                 </Grid.ColumnDefinitions>
@@ -94,6 +94,7 @@
                             <RowDefinition Height="2"/>
                             <RowDefinition Height="50"/>
                             <RowDefinition Height="1*"/>
+                            <RowDefinition Height="50"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="2*"/>
@@ -127,6 +128,15 @@
                         <Button x:Name="incomeDelete" Grid.Row="4" Grid.Column="2" Style="{StaticResource formbtn}" Click="DeleteIncomeExpense">Delete</Button>
                         <TextBox x:Name="incomeSearchBox" Grid.Row="4" Grid.Column="0" Controls:TextBoxHelper.Watermark="Search by Source" Controls:TextBoxHelper.ClearTextButton="True" Style="{StaticResource formtextbox}" TextChanged="IncomeSearchBox_TextChanged"></TextBox>
                         <Grid Grid.Row="3" Grid.ColumnSpan="3" Background="Green"/>
+
+                        <StackPanel Orientation="Horizontal"
+                                    Grid.Row="6"
+                                    HorizontalAlignment="Right"
+                                    Grid.ColumnSpan="3">
+                            <TextBlock FontSize="25" Margin="0 0" VerticalAlignment="Top">Total: </TextBlock>
+                            <TextBlock FontSize="25" Margin="10 0 0 0" Padding="5 0" Background="White" VerticalAlignment="Top">₹</TextBlock>
+                            <TextBlock x:Name="TotalIncome" FontSize="25" Margin="0 0 50 0" Padding="5 0" Background="White" VerticalAlignment="Top"></TextBlock>
+                        </StackPanel>
                     </Grid>
 
                     <Grid Grid.Column="1" Background="IndianRed" Margin="10 0 0 0"></Grid>
@@ -138,6 +148,7 @@
                             <RowDefinition Height="2"/>
                             <RowDefinition Height="50"/>
                             <RowDefinition Height="1*"/>
+                            <RowDefinition Height="50"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="2*"/>
@@ -171,18 +182,19 @@
                         <Button x:Name="expenseDelete" Grid.Row="4" Grid.Column="2" Style="{StaticResource formbtn}" Click="DeleteIncomeExpense">Delete</Button>
                         <TextBox x:Name="expenseSearchBox" Grid.Row="4" Grid.Column="0" Controls:TextBoxHelper.Watermark="Search by Recipient" Controls:TextBoxHelper.ClearTextButton="True" Style="{StaticResource formtextbox}" TextChanged="ExpenseSearchBox_TextChanged"></TextBox>
                         <Grid Grid.Row="3" Grid.ColumnSpan="3" Background="IndianRed"/>
+
+                        <StackPanel Orientation="Horizontal"
+                                    Grid.Row="6"
+                                    HorizontalAlignment="Right"
+                                    Grid.ColumnSpan="3">
+                            <TextBlock FontSize="25" Margin="0 0" VerticalAlignment="Top">Total:</TextBlock>
+                            <TextBlock FontSize="25" Margin="10 0 0 0" Padding="5 0" Background="White" VerticalAlignment="Top">₹</TextBlock>
+                            <TextBlock x:Name="TotalExpense" FontSize="25" Margin="0 0 50 0" Padding="5 0" Background="White" VerticalAlignment="Top"></TextBlock>
+                        </StackPanel>
                     </Grid>
                 </Grid>
 
-                <Grid Grid.Row="2" Margin="50 0">
-                    <Grid.RowDefinitions>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="0" Background="LightGreen" Margin="0 0 10 0"></Grid>
-                    <Grid Grid.Column="1" Background="Pink" Margin="10 0 0 0"></Grid>
+                <Grid Grid.Row="2" Margin="0">
                 </Grid>
             </Grid>
             <Grid Height="800" Width="1500" x:Name="DialogSpace"></Grid>
